Fix SonarQube issues from page 1: remove public modifiers, replace lambdas with method refs, remove unused fields, extract constants